--- a/templates/tension/list.html
+++ b/templates/tension/list.html
@@ -66,7 +66,7 @@
           </a>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
-          <a class="c-sidebar-nav-link" href="tension/list">
+          <a class="c-sidebar-nav-link" href="torsion/list">
             <svg class="c-sidebar-nav-icon">
               <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-pencil"></use>
             </svg> Torsion Test
